<resources>
    <!-- App-wide -->
    <string name="app_name">Wled Remote</string>
    <string name="retry">Retry</string>
    <string name="connect">Connect</string>

    <!-- Fragment Labels -->
    <string name="dashboard_label">Dashboard</string>
    <string name="info_fragment_label">Device Info</string>
    <string name="settings_label">Settings</string>
    <string name="effects_label">Effects</string>
    <string name="segments_label">Segments</string>
    <string name="power">Power</string>

    <!-- DashboardFragment -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_color">Choose a new color</string>
    <string name="dashboard_details">Touch for details</string>
    <string name="dashboard_connected_to">Connected to: %s</string>
    <string name="dashboard_connecting_to">Connecting to: %s</string>
    <string name="brightness_percent">%s%</string>
    <string name="brightness">Brightness</string>
    <string name="choose_a_palette">Choose a palette</string>
    <string name="palette">Palette</string>
    <string name="change_color">Change color</string>
    <string name="connecting">Connecting…</string>
    <string name="palettes_network_error">Network error while trying to get palettes</string>
    <string name="palettes_generic_error">Unknown error while trying to get palettes</string>
    <string name="state_network_error">Network error while trying to get device state</string>
    <string name="state_generic_error">Unknown error while trying to get device state</string>
    <string name="send_state_network_error">An network error has occurred while trying to send new device state</string>
    <string name="send_state_generic_error">An unknown error has occurred while trying to send new device state</string>

    <!-- EffectsFragment -->
    <string name="speed">Speed</string>
    <string name="intensity">Intensity</string>
    <string name="effects_network_error">Network error while trying to get effects</string>
    <string name="effects_unknown_error">Unknown error while trying to get effects</string>

    <!-- SegmentsFragment -->
    <string name="add_segment">Add Segment</string>
    <string name="segments">Segments</string>
    <string name="segments_segment">Segment %s</string>
    <string name="segment_network_error">Network error while trying to get device segment</string>
    <string name="segment_generic_error">Unknown error while trying to get device segment</string>
    <string name="send_segment_network_error">An network error has occurred while trying to send new device segment</string>
    <string name="send_segment_generic_error">An unknown error has occurred while trying to send new device segment</string>
    <string name="start_leds_label">Start LEDs</string>
    <string name="end_leds_label">End LEDs</string>
    <string name="grouping_label">Grouping</string>
    <string name="spacing_label">Spacing</string>
    <string name="reverse_direction_label">Reverse direction</string>
    <string name="mirror_effect_label">Mirror effect</string>

    <!-- InfoFragment -->
    <string name="info_network_error">Network error while trying to get device info</string>
    <string name="info_generic_error">Unknown error while trying to get device info</string>

    <!-- SetupActivity -->
    <string name="connection_failed">Connection failed</string>
    <string name="setup_device_ip">Device IP</string>
    <string name="setup_title">Ready to start?</string>
    <string name="setup_subtitle">Enter your controller IP to continue</string>
    <string name="info_setup_network_error">A network error occurred while trying to get device info. Check your connection on both devices and try again</string>
    <string name="info_setup_unknown_error">An unknown error occurred while trying to get device info. Try rebooting the device and try again</string>
    <string name="effects_loading">Loading effects</string>
</resources>
