<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/segment_container"
            style="@style/RoundedCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp"
            app:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/segment_selected_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/segment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/segment_selected_checkbox"
                    android:layout_alignBaseline="@+id/segment_selected_checkbox"
                    android:fontFamily="@font/manrope_medium"
                    android:textSize="16sp"
                    tools:text="hellooo" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/expanded_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/segment_selected_checkbox"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/start_leds_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:hint="@string/start_leds_label">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/end_leds_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_weight="1"
                            android:hint="@string/end_leds_label">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/grouping_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:hint="@string/grouping_label">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/spacing_input"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_weight="1"
                            android:hint="@string/spacing_label">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/toggle_power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/power_checkbox_state"
                            android:clickable="true"
                            android:focusable="true" />

                        <com.google.android.material.slider.Slider
                            android:id="@+id/brightness_slider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-12dp"
                            android:valueFrom="0"
                            android:valueTo="255" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/reverse_direction_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/reverse_direction_label" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/mirror_effect_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/mirror_effect_label" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>